[project]
name = "ctdml"
version = "0.1.0"
description = "ML curriculum development for Code the Dream "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
                 "mkdocs", 
                 "mkdocs-material"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build]
include = ["README.md",
  "mkdocs.yml",
  "docs/",]